force-app/main/default/objects/Agent_Check_Result__c/Agent_Check_Result__c.object-meta.xml
<CustomObject>
    <!-- Master-Detail to Loan_Application__c for roll-up of agent scores and failed agent counts. -->
    <label>Agent Check Result</label>
    <nameField>
        <displayFormat>ACR-{00000}</displayFormat>
        <label>Check Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Check Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>