force-app/main/default/objects/Agent_Check_Result__c/fields/Agent_Run_Order__c.field-meta.xml
<CustomField>
    <fullName>Agent_Run_Order__c</fullName>
    <label>Agent Run Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>