force-app/main/default/objects/Agent_Check_Result__c/fields/Agent_Version__c.field-meta.xml
<CustomField>
    <fullName>Agent_Version__c</fullName>
    <label>Agent Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>