force-app/main/default/objects/Agent_Check_Result__c/fields/Execution_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time_Ms__c</fullName>
    <label>Execution Time Ms</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>