force-app/main/default/objects/Agent_Check_Result__c/fields/Raw_Output_JSON__c.field-meta.xml
<CustomField>
    <fullName>Raw_Output_JSON__c</fullName>
    <label>Raw Output JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>