force-app/main/default/objects/Agent_Check_Result__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>