force-app/main/default/objects/Agent_Check_Result__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>Recommendations</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>