force-app/main/default/objects/Agent_Check_Result__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Pass</fullName>
        </value>
        <value>
            <fullName>Warning</fullName>
        </value>
        <value>
            <fullName>Fail</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>