force-app/main/default/objects/Agent_Check_Result__c/fields/Run_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Run_Completed_At__c</fullName>
    <label>Run Completed At</label>
    <type>DateTime</type>
</CustomField>