force-app/main/default/objects/Agent_Check_Result__c/fields/Run_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Run_Started_At__c</fullName>
    <label>Run Started At</label>
    <type>DateTime</type>
</CustomField>