force-app/main/default/objects/Agent_Check_Result__c/fields/Score_Impact__c.field-meta.xml
<CustomField>
    <fullName>Score_Impact__c</fullName>
    <label>Score Impact</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>