force-app/main/default/objects/Agent_Check_Result__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Pending</fullName>
        </value>
        <value>
            <fullName>Running</fullName>
        </value>
        <value>
            <fullName>Completed</fullName>
        </value>
        <value>
            <fullName>Failed</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>